# feishu_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  executor.py  router.py
config/: settings.py
skills/data_query/: skill.md
skills/data_query/refs/: table_schema.md
skills/resume_screening/: skill.md
skills/resume_screening/refs/: scoring_criteria.md
skills/resume_screening/templates/: evaluation_report.md
skills/weekly_report/: skill.md
skills/weekly_report/refs/: table_schema.md
skills/weekly_report/templates/: weekly_report_template.md
tools/: __init__.py  feishu_approval.py  feishu_bitable.py  feishu_document.py  feishu_message.py
