[project]
name = "feishu-agent"
version = "0.1.0"
description = "Feishu AI Agent with Skill routing system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]
